--- a/Resources/layout/activity_main.xml
+++ b/Resources/layout/activity_main.xml
@@ -6,7 +6,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 	<TextView
-		android:text="Číslo písně:"
+		android:text="@string/search_hint"
 		android:textAppearance="?android:attr/textAppearanceLarge"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
@@ -21,7 +21,7 @@
         android:text=""
         android:inputType="text" />
 	<Button
-		android:text="Hledej"
+		android:text="@string/search_button_text"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_below="@id/SelectionText"
