--- a/Hejkal/MainPage.xaml
+++ b/Hejkal/MainPage.xaml
@@ -1,41 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Hejkal.MainPage">
+			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+			 x:Class="Hejkal.MainPage">
 			 
-    <ScrollView>
-        <VerticalStackLayout 
-            Spacing="25" 
-            Padding="30,0" 
-            VerticalOptions="Center">
+	<ScrollView>
+		<VerticalStackLayout Padding="0,20" Spacing="25" >
 
-            <Image
-                Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
-                
-            <Label 
-                Text="Hello, World!"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
-            
-            <Label 
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
+		<SearchBar x:Name="SearchBar" Placeholder="Zadej číslo písně nebo část názvu..." PlaceholderColor="Gray"
+			IsTextPredictionEnabled="False"
+			HorizontalOptions="FillAndExpand"
+			SearchButtonPressed="SearchBar_SearchButtonPressed" />
 
-            <Button 
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
+		<Button x:Name="ShowAllButton"
+				Text="... nebo zobraz všechny písně"
+				Clicked="ShowAllButton_Clicked"
+				HorizontalOptions="Center" />
 
-        </VerticalStackLayout>
-    </ScrollView>
+		<Label x:Name="VersionLabel" FontSize="10" Text="version" />
+
+		</VerticalStackLayout>
+	</ScrollView>
  
 </ContentPage>
